--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^12.4.0",
     "jsonwebtoken": "^9.0.2",
     "latest": "^0.2.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "uuid": "^9.0.1"
