--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
     "headers": [
       {
         "source": "/(.*)",
+        "dest": "app.js",
         "headers": [
           { "key": "Access-Control-Allow-Credentials", "value": "true" },
           { "key": "Access-Control-Allow-Origin", "value": "https://chronocraft-frontend.vercel.app" },
