--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,11 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "app.js"
-        
+        "dest": "app.js",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+          "Access-Control-Allow-Origin": "https://chronocraft-frontend.vercel.app"
+        }
         
       }
     ]
