--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,21 @@
 {
-    "builds": [
-      {
+  "builds": [
+    {
       "src": "app.js",
       "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "https://chronocraft-frontend.vercel.app",
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization"
       }
-    ],
-
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.js",
-        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-        "headers": {
-          "Access-Control-Allow-Origin": "https://chronocraft-frontend.vercel.app"
-        }
-      }
-    ]
-  }
-  
-  
+    }
+  ]
+}
